test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/add_void_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  void
  *
  identifier(malloc)
  (
  unsigned
  long
  identifier(size)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  void
  *
  identifier(x)
  =
  identifier(malloc)
  (
  const int(100)
  )
  ;
  identifier(x)
  =
  identifier(x)
  +
  const int(1)
  ;
  return
  const int(0)
  ;
  }
